# spark-perf-lint

./: .gitignore  .pre-commit-hooks.yaml  .spark-perf-lint.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  good-test.json  pyproject.toml  self-test.json  setup.cfg
.github/actions/spark-perf-lint/: action.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: CONFIGURATION.md  CONTRIBUTING.md  Gemfile  KNOWLEDGE_BASE.md  PRE_COMMIT_SETUP.md  RULES_REFERENCE.md  _config.yml  architecture.md  ci-cd.md  getting-started.md  index.html  index.md  knowledge-base.md  pre-commit.md
docs/_sass/custom/: custom.scss
docs/rules/: d01-cluster-config.md  d02-shuffle.md  d03-joins.md  d04-partitioning.md  d05-skew.md  d06-caching.md  d07-io-format.md  d08-aqe.md  d09-udf-code.md  d10-catalyst.md  d11-monitoring.md  index.md
examples/: .pre-commit-config.yaml.example  .spark-perf-lint.yaml.example
notebooks/: deep_audit.ipynb
src/spark_perf_lint/: cli.py  config.py  types.py
src/spark_perf_lint/engine/: __init__.py  ast_analyzer.py  file_scanner.py  orchestrator.py  pattern_matcher.py  plan_analyzer.py
src/spark_perf_lint/knowledge/: __init__.py  decision_matrices.yaml  patterns.yaml  recommendations.yaml  spark_configs.yaml
src/spark_perf_lint/llm/: __init__.py  analyzer.py  prompts.py  provider.py
src/spark_perf_lint/observability/: __init__.py  file_tracer.py  langsmith_tracer.py  tracer.py  viewer.py
src/spark_perf_lint/reporters/: __init__.py  github_pr.py  json_reporter.py  markdown_reporter.py  terminal.py
src/spark_perf_lint/rules/: __init__.py  base.py  d01_cluster_config.py  d02_shuffle.py  d03_joins.py  d04_partitioning.py  d05_skew.py  d06_caching.py  d07_io_format.py  d08_aqe.py  d09_udf_code.py  d10_catalyst.py  d11_monitoring.py  registry.py
src/spark_perf_lint/tier3/: __init__.py  benchmarks.py  data_generators.py
tests/: __init__.py  conftest.py  test_ast_analyzer.py  test_code_generator.py  test_coverage_boost.py  test_edge_cases.py  test_file_scanner.py  test_integration.py  test_llm_analyzer.py  test_pattern_matcher.py  test_performance.py  test_precommit_integration.py  test_reporters.py  test_rules_d01_config.py  test_rules_d02_shuffle.py  test_rules_d03_joins.py  test_rules_d04_partitioning.py  test_rules_d05_skew.py  test_rules_d06_caching.py  test_rules_d07_io.py  test_rules_d08_aqe.py  test_rules_d09_udf.py  test_rules_d10_catalyst.py  test_rules_d11_monitoring.py
tests/fixtures/: __init__.py  code_generator.py
tests/fixtures/bad_code/: bad_aqe.py  bad_caching.py  bad_config.py  bad_general.py  bad_io.py  bad_joins.py  bad_partitioning.py  bad_shuffles.py  bad_skew.py  bad_udfs.py
tests/fixtures/good_code/: good_aqe.py  good_caching.py  good_config.py  good_general.py  good_io.py  good_joins.py  good_partitioning.py  good_shuffles.py  good_skew.py  good_udfs.py
