[metadata]
name = spark-perf-lint
version = 0.1.0
description = Enterprise-grade Apache Spark performance linter
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Sucandra Dasa
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Quality Assurance

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
